run.log
2023-03-04 10:32:57,294:[critical]	./LimbusLocalize/assets/Localize/CN/CN_AbEvents_Mirror.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 151, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 99, in transform
    for q in h.keys():
AttributeError: 'str' object has no attribute 'keys'

2023-03-04 10:32:57,380:[critical]	./LimbusLocalize/assets/Localize/CN/CN_CN_settings-ui-donttranslate.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 151, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 87, in transform
    if len(data[keys[0]]["dataList"]) == len(data[keys[1]]["dataList"]) == len(data[keys[-1]]["dataList"]) == len(data[keys[-2]]["dataList"]):
IndexError: list index out of range

2023-03-04 10:32:57,499:[ERROR]	./LimbusLocalize/assets/Localize/CN/CN_S101B.json load error
2023-03-04 10:32:57,500:[critical]	./LimbusLocalize/assets/Localize/CN/CN_S101B.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 77, in fetch_json
    fin[i] = json.load(f)
  File "/usr/lib/python3.10/json/__init__.py", line 293, in load
    return loads(fp.read(),
  File "/usr/lib/python3.10/json/__init__.py", line 346, in loads
    return _default_decoder.decode(s)
  File "/usr/lib/python3.10/json/decoder.py", line 337, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib/python3.10/json/decoder.py", line 353, in raw_decode
    obj, end = self.scan_once(s, idx)
json.decoder.JSONDecodeError: Invalid control character at: line 9 column 27 (char 126)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 151, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 81, in fetch_json
    fin[i] = eval(f.read())
  File "<string>", line 9
    "place": "梅菲斯托费勒斯 内部
             ^
SyntaxError: unterminated string literal (detected at line 9)

2023-03-04 10:32:57,569:[ERROR]	./LimbusLocalize/assets/Localize/CN/CN_S204B.json load error
2023-03-04 10:32:57,570:[critical]	./LimbusLocalize/assets/Localize/CN/CN_S204B.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 77, in fetch_json
    fin[i] = json.load(f)
  File "/usr/lib/python3.10/json/__init__.py", line 293, in load
    return loads(fp.read(),
  File "/usr/lib/python3.10/json/__init__.py", line 346, in loads
    return _default_decoder.decode(s)
  File "/usr/lib/python3.10/json/decoder.py", line 337, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib/python3.10/json/decoder.py", line 353, in raw_decode
    obj, end = self.scan_once(s, idx)
json.decoder.JSONDecodeError: Invalid control character at: line 61 column 47 (char 1194)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 151, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 81, in fetch_json
    fin[i] = eval(f.read())
  File "<string>", line 61
    "content": "你们两个，直到现在都觉得我们是毫无价值的人渣吧，不是吗？
               ^
SyntaxError: unterminated string literal (detected at line 61)

2023-03-04 10:32:57,694:[critical]	./LimbusLocalize/assets/Localize/CN/CN_NickName.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 151, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 87, in transform
    if len(data[keys[0]]["dataList"]) == len(data[keys[1]]["dataList"]) == len(data[keys[-1]]["dataList"]) == len(data[keys[-2]]["dataList"]):
KeyError: 'dataList'

2023-03-04 10:32:57,812:[ERROR]	./LimbusLocalize/assets/Localize/CN/CN_S102B.json load error
2023-03-04 10:32:57,813:[critical]	./LimbusLocalize/assets/Localize/CN/CN_S102B.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 77, in fetch_json
    fin[i] = json.load(f)
  File "/usr/lib/python3.10/json/__init__.py", line 293, in load
    return loads(fp.read(),
  File "/usr/lib/python3.10/json/__init__.py", line 346, in loads
    return _default_decoder.decode(s)
  File "/usr/lib/python3.10/json/decoder.py", line 337, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib/python3.10/json/decoder.py", line 353, in raw_decode
    obj, end = self.scan_once(s, idx)
json.decoder.JSONDecodeError: Invalid control character at: line 7 column 30 (char 121)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 151, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 81, in fetch_json
    fin[i] = eval(f.read())
  File "<string>", line 7
    "content": "不好意思！我有个问题！
               ^
SyntaxError: unterminated string literal (detected at line 7)

2023-03-04 10:32:57,883:[critical]	./LimbusLocalize/assets/Localize/CN/CN_AbEvents.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 151, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 99, in transform
    for q in h.keys():
AttributeError: 'str' object has no attribute 'keys'

